Fix nav hover issue on safari

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -216,7 +216,7 @@
     }
 
     a {
-      width: fit-content;
+      display: -webkit-box;
       align-items: center;
       padding: 0.5rem 0;
       font-size: 1.75rem;
